add the build-essentials package

--- a/tasks.yml
+++ b/tasks.yml
@@ -47,6 +47,7 @@
         - unrar
         - gparted
         - virtualbox
+        - build-essential
 
     - name: Install general Python deps
       pip:
