--- a/tasks.yml
+++ b/tasks.yml
@@ -75,6 +75,7 @@
           - tarsnap
           - kdenlive
           - blender
+          - obs-studio
 
     - name: Install general Python deps
       pip:
