--- a/tasks.yml
+++ b/tasks.yml
@@ -109,9 +109,15 @@
           - swaks
           - k3b
           - obs-studio
+          - python3.9
+          - python3.9-dev
+          - python3.9-venv
           - python3.10
           - python3.10-dev
           - python3.10-venv
+          - python3.11
+          - python3.11-dev
+          - python3.11-venv
           - texlive-latex-base
           - texlive-latex-extra
           - vlc-plugin-fluidsynth
