--- a/tasks.yml
+++ b/tasks.yml
@@ -118,6 +118,9 @@
           - python3.11
           - python3.11-dev
           - python3.11-venv
+          - python3.12
+          - python3.12-dev
+          - python3.12-venv
           - texlive-latex-base
           - texlive-latex-extra
           - vlc-plugin-fluidsynth
