install docker buildx

--- a/tasks.yml
+++ b/tasks.yml
@@ -162,6 +162,7 @@
           - ethereum
           - docker.io
           - docker-compose-v2
+          - docker-buildx
           - kcachegrind
           - qpdf
           - libpq-dev
