--- a/tasks.yml
+++ b/tasks.yml
@@ -136,6 +136,7 @@
           - curl
           - tarsnap
           - kdenlive
+          - breeze
           - blender
           - okular
           - swaks
