--- a/tasks.yml
+++ b/tasks.yml
@@ -29,7 +29,7 @@
 
     - name: Add brave browser packaging key
       apt_key:
-        url: https://brave-browser-apt-release.s3.brave.com/brave-core.asc
+        url: https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
         state: present
 
     - name: Add brave browser apt repository
@@ -96,7 +96,7 @@
     - name: Enable librewolf
       shell: extrepo enable librewolf
 
-    - name: Update apt cache
+    - name: Update apt cache and packages
       apt:
         update_cache: yes
         cache_valid_time: 21600
@@ -181,6 +181,7 @@
           - pandoc
           - librewolf
           - htop
+          - golang-1.23-go
 
     - name: Install python packages via pip
       pip:
