--- a/tasks.yml
+++ b/tasks.yml
@@ -83,7 +83,7 @@
         keyserver: keyserver.ubuntu.com
         id: 2A518C819BE37D2C2031944D1C52189C923F6CA9
 
-    - name: Add go-ethereum team repository
+    - name: Add ethereum team repository
       apt_repository:
         repo: "deb https://ppa.launchpadcontent.net/ethereum/ethereum/ubuntu {{ ansible_distribution_release }} main"
         state: present
@@ -189,6 +189,9 @@
           - jq
           - cmake
           - libtool-bin
+          - libtree-sitter-dev
+          - libgccjit-11-dev
+          - solc
 
     - name: Install python packages via pip
       pip:
