--- a/tasks.yml
+++ b/tasks.yml
@@ -192,6 +192,7 @@
           - libtree-sitter-dev
           - libgccjit-11-dev
           - solc
+          - postgresql-client
 
     - name: Install python packages via pip
       pip:
